# kcm

./: CMakeLists.txt  Makefile  PKGBUILD  README.md  kcm_obsidianos.json
package/: kcm_obsidianos.desktop
src/kcm/: backupmanager.cpp  backupmanager.h  environmentmanager.cpp  environmentmanager.h  obsidianoskcm.cpp  obsidianoskcm.h  slotmanager.cpp  slotmanager.h  updatemanager.cpp  updatemanager.h
ui/: BackupsPage.qml  EnvironmentPage.qml  SlotsPage.qml  UpdatesPage.qml  main.qml
